--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 .main-body {
   position: relative;
-  border: 2px solid black;
+  border: 2px solid rgba(0, 0, 0, 0.409);
   top: 10vh;
   margin: 0 auto;
   text-align: center;
@@ -9,13 +9,45 @@
 }
 
 form {
-  width: 80%;
-  background-color: rgb(241, 240, 240);
+  width: 100%;
+  background-color: rgba(241, 240, 240, 0.821);
   margin: 0 auto;
+}
+
+form input[type="number"] {
+  width: 50%;
+  padding: 5px;
+  font-size: 18px;
+  border-radius: 5px;
+  border: 0.5px solid rgba(0, 0, 0, 0.625);
+}
+
+form input[type="radio"]::before {
+  content: "";
+  width: 0.65em;
+  height: 0.65em;
+  border-radius: 50%;
+  transform: scale(0);
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1em 1em red;
+}
+
+form input[type="radio"]:checked::before {
+  transform: scale(1);
 }
 
 .result {
   position: relative;
   top: 10rem;
   margin: 0 auto;
+}
+
+#btn {
+  padding: 5px;
+  width: 15vh;
+  margin: 1rem auto;
+  background-color: rgba(0, 0, 0, 0.588);
+  color: white;
+  border: none;
+  border-radius: 3px;
 }
